--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ q:before, q:after {content: '';content: none;}
 table {border-collapse: collapse;border-spacing: 0;}
 html,body {position: relative; height:100%; padding:0; margin:0;font-family: 'Noto Sans KR';background-color: #fff;letter-spacing: -0.6px;}
 .skip {width: 0; font-size: 0; text-indent: -9999px; overflow: hidden; height: 0;}
+
 /*****SCROLLBAR CUSTOM*****/
 ::-webkit-scrollbar {width: 7px; height: 7px;}
 ::-webkit-scrollbar-thumb{background-color: #c7c7c7; border-radius: 10px;}
@@ -43,7 +44,6 @@ header.on .gnb {height: 70px;}
 header .gnb {display: flex;max-width: 1300px;height: 80px;align-items: center;margin: 0 auto;justify-content: space-between;transition: .3s all ease-in-out;}
 header .gnb .logo {position: relative; width: 160px; height: 38px; overflow: hidden; background: url('../images/logo.svg') no-repeat center;background-size: cover;background-position-y: -43px;}
 header.on .gnb .logo {background-position-y: 0px;}
-header .gnb .logo .logo-text {width: 0;height: 0;font-size: 0;text-indent: -9999px;overflow: hidden;}
 header .gnb .pagination {position: relative;top: 0; left:0;display: flex; transform: translateY(0px);}
 header .gnb .pagination a::before {display: none;}
 header nav ul.pagination li {margin-left: 75px;}
@@ -203,13 +203,12 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 .out .sp-img .imgbox { animation:leftMoveOut 0.5s cubic-bezier(0.24,0.57,0.45,1) both;}
 .out .swiper-slide-active .sp-img .imgbox { animation:leftMoveIn 0.5s cubic-bezier(0.24,0.57,0.45,1) both;}
 .about-slider .slider-controls .count-slider {display: none; font-size: 14px;letter-spacing: 1px;}
-.about-slider .slider-controls .active-slide {font-size: 15px; font-weight: 500;}
-.about-slider .slider-controls .total-slide {}
+.about-slider .slider-controls .active-slide {font-size: 17px; font-weight: 500;}
 .about-slider .swiper-button-next {right: -5px;margin-top: -5%;} 
 .about-slider .swiper-button-next:after {content: ''; width: 18px;height: 30px; background: url('../images/arrow_next_b.svg') no-repeat center; background-size: cover;}
 .about-slider .swiper-button-prev {left: 36%;margin-top: -5%;}
 .about-slider .swiper-button-prev:after {content: ''; width: 18px;height: 30px; background: url('../images/arrow_prev_b.svg') no-repeat center; background-size: cover;}
-.about-slider .swiper-pagination-bullet {width: 13px;height: 13px;border-radius: 2px;background-color: #334291; opacity: 1;transition: .3s all ease;}
+.about-slider .swiper-pagination-bullet {position: relative; width: 13px;height: 13px;border-radius: 2px;background-color: #334291; opacity: 1;transition: .3s all ease;}
 .about-slider .swiper-pagination {bottom: 10vh; text-align: left;}
 .about-slider .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .about-slider .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {margin:0 10px;}
 .about-slider .swiper-pagination-bullet.swiper-pagination-bullet-active {background-color: #FE0000; transform: rotate(45deg);}
@@ -420,21 +419,13 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 .positions.active .mobis-slider .swiper-slide:nth-child(3) {transition-delay: .4s;}
 .positions.active .mobis-slider .swiper-slide:nth-child(4) {transition-delay: .5s;}
 .mobis-slider .swiper-slide .positions-item {display: flex;flex-direction: column;align-items: center;justify-content: space-evenly;width: 100%;height: 100%;border-radius: 10px;background-color: rgba(16,22,49,0.8);text-align: center;transition: .3s all ease; box-shadow: 0px 2px 20px 0px rgb(0 0 0 / 41%);}
-.mobis-slider .swiper-slide:hover .positions-item {background-color: #fff; box-shadow: 0px 7px 30px 3px rgb(0 0 0 / 47%)}
-.mobis-slider .swiper-slide:hover:before {transform: translate(-55px, -60px);opacity: 0.4;}
 .mobis-slider .swiper-slide:nth-child(1) .icon-box {background: url('../images/positions_icon1.svg') no-repeat right;background-position-x: -73px;}
-.mobis-slider .swiper-slide:nth-child(1):hover .icon-box {background-position-x: 13px;}
 .mobis-slider .swiper-slide:nth-child(2) .icon-box {background: url('../images/positions_icon2.svg') no-repeat right;}
-.mobis-slider .swiper-slide:nth-child(2):hover .icon-box {background-position-x: 0px;}
 .mobis-slider .swiper-slide:nth-child(3) .icon-box {background: url('../images/positions_icon3.svg') no-repeat right;background-position-x: -85px;}
-.mobis-slider .swiper-slide:nth-child(3):hover .icon-box {background-position-x: 0px;}
 .mobis-slider .swiper-slide:nth-child(4) .icon-box {background: url('../images/positions_icon4.svg') no-repeat right;background-position-x: -76px;}
-.mobis-slider .swiper-slide:nth-child(4):hover .icon-box {background-position-x: 7px;}
 .mobis-slider .swiper-slide .slider-in {margin:0 20px}
 .mobis-slider .swiper-slide .icon-text span {font-size: 18px; line-height: 1.4;color: #fff; transition: .3s all ease;}
-.mobis-slider .swiper-slide:hover .icon-text span {color: #1F2A65;}
 .mobis-slider .swiper-slide .icon-box {width: 80px; height: 80px; overflow: hidden; transition: .3s all ease;}
-.mobis-slider.swiper-slide:hover .icon-box {transform: scale(1.2);}
 .mobis-slider.destroy .swiper-slide {flex-shrink: 1; display: flex;flex-direction: column;justify-content: space-evenly; align-items: center; margin-left: 60px;}
 .mobis-slider.destroy .swiper-slide:first-child {margin:0;}
 
@@ -607,15 +598,27 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 
 /*****FOOTER*****/
 footer {padding: 70px 0 82px;color:#fff; background-color: #06092B;}
-footer .foot-logo {position: relative;width: 160px;height: 38px;margin-bottom: 8px;overflow: hidden;background: url('../images/logo.svg') no-repeat center;background-size: cover;background-position-y: -43px;}
+footer .foot-logo {position: relative;width: 160px;height: 38px;margin-bottom: 8px;overflow: hidden;background: url('../images/logo.svg') no-repeat center;background-size: cover;background-position-y: 0px;}
+footer .footer-in p {line-height: 1.3;}
 footer .footer-info {display: flex; flex-wrap: wrap; width: 380px;margin-top:50px;}
 footer .footer-info li {margin: 6px 27px 6px 0;}
 footer .footer-info li span {opacity: 0.5; margin-right: 8px;}
 footer .copyright {position: absolute; right:0; bottom:8px;opacity: 0.5;}
-footer .copyright span:nth-child(1) {margin-left: 0;}
-footer .copyright span {margin-left:10px;}
+footer .copyright span {margin:5px 10px 5px 0;}
 
 /*****MEDIA QUERY*****/
+@media (hover: hover) {
+    /*****OUR POSITIONS*****/
+	.mobis-slider .swiper-slide:hover:before {transform: translate(-55px, -60px);opacity: 0.4;}
+    .mobis-slider .swiper-slide:hover .positions-item {background-color: #fff;box-shadow: 0px 7px 30px 3px rgb(0 0 0 / 47%);}
+    .mobis-slider .swiper-slide:nth-child(1):hover .icon-box {background-position-x: 13px;}
+    .mobis-slider .swiper-slide:nth-child(2):hover .icon-box {background-position-x: 0px;}
+    .mobis-slider .swiper-slide:nth-child(3):hover .icon-box {background-position-x: 0px;}
+    .mobis-slider .swiper-slide:nth-child(4):hover .icon-box {background-position-x: 7px;}
+    .mobis-slider .swiper-slide:hover .icon-text span {color: #1F2A65;}
+    .mobis-slider.swiper-slide:hover .icon-box {transform: scale(1.2);}
+}
+
 @media screen and (max-width: 1600px) {
     /*****OUR PRODUCTS*****/
     .products .products-cont ul li:nth-child(1) .products-bg, .products .products-cont ul li:nth-child(2) .products-bg {background-position: 0;}
@@ -674,6 +677,7 @@ footer .copyright span {margin-left:10px;}
 
     /*****HEADER*****/
     header .gnb {justify-content: center;}
+    header .gnb .logo {width: 120px; height: 30px;background-position-y: -32px;}
     header .gnb .pagination {flex-wrap: wrap;}
     header nav {position: fixed;top: 60px;width: 300px; height: 100vh;left: -300px;background-color: #fff;z-index: 2; box-shadow: 2px 7px 8px 2px rgb(0 0 0 / 20%); transition: .3s left ease;}
     header.open nav {left: 0;}
@@ -709,7 +713,7 @@ footer .copyright span {margin-left:10px;}
     .active .about-slider .swiper {overflow: hidden;}
     .about-slider .swiper-wrapper {overflow: hidden;}
     .about-slider .slider-controls {display: flex;margin-top: 15px;}
-    .about-slider .slider-controls .count-slider {display: flex;}
+    .about-slider .slider-controls .count-slider {display: flex;align-items: center;}
     .about-slider .swiper-button-next {top: auto;right: -7px;bottom: -12px; margin-top:0;}
     .about-slider .swiper-button-next:after {width: 12px; height: 20px;}
     .about-slider .swiper-button-prev {top: auto;left:auto; right:22px; bottom: -12px; margin-top:0;}
@@ -717,14 +721,16 @@ footer .copyright span {margin-left:10px;}
     .about-slider .slider-text .sp-text {width: auto; min-height: auto;}
     .about-slider .swiper-pagination {display: flex; bottom: 6px; left: 50%; width: calc(100% - 100px); text-align: center; transform: translateX(-53%);}
     .about-slider .swiper-pagination-bullet {width: 100%; height: 3px;background-color: #E0E0E0;}
-    .about-slider .swiper-pagination-bullet.swiper-pagination-bullet-active {transform: rotate(0deg);}
+    .about-slider .swiper-pagination-bullet.swiper-pagination-bullet-active {transform: rotate(0deg); background-color: transparent;}
     .about-slider .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .about-slider .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {margin:0}
+    .about-slider .swiper-pagination-bullets .swiper-pagination-bullet:after {content: ''; position: absolute; top:0; left:0; width: 0%; height: 3px; background-color: #FE0000; transition: .3s all ease;} 
+    .about-slider .swiper-pagination-bullet.swiper-pagination-bullet-active:after {width: 100%;}
 
     /*****BUSINESS*****/
     .business {height: auto;}
     .business-in {padding: 10vh 0;}
     .column-list {flex-wrap: wrap;}
-    .business .column-list {margin: 35px 0vw 0;}
+    .business .column-list {margin: 35px 2vw 0;}
     .business .column-list li {margin:0;}
     .business .column-list .icon-item {padding: 0 2vw;}
     
@@ -757,7 +763,7 @@ footer .copyright span {margin-left:10px;}
     .mip-slider .swiper-button-next, .mip-slider .swiper-button-prev {display: none;}
     
     /*POPUP*/
-    .popup {top:20vh; left: 20px; right: 20px; height: 80vh;}
+    .popup {top:30vh; left: 20px; right: 20px; height: 75vh;}
     .popup-head {align-items: flex-start;padding: 15px 20px 15px 20px; border: none;}
     .popup-head .popup-title span {font-size: 15px;}
     .popup-head .popup-title h3 {font-size: 20px;}
@@ -794,14 +800,14 @@ footer .copyright span {margin-left:10px;}
     .location-in {padding: 10vh 0;}
 
     /*****FOOTER*****/
-    footer {padding: 24px 20px; font-size: 14px;}
-    footer .foot-logo {margin-bottom: 12px;}
+    footer {padding: 24px 0px; font-size: 14px;}
+    footer .foot-logo {width: 120px;height: 30px;margin-bottom: 12px;}
     footer .footer-info {width: auto; margin-top:20px;}
-    footer .copyright {position: relative; bottom: 0; margin-top: 45px;}
+    footer .copyright {position: relative; bottom: 0; margin-top: 45px;display: flex;flex-wrap: wrap;}
 }
 @media screen and (max-width: 768px) {
     /*****BUSINESS*****/
-    .column-list .icon-text {margin-top: 16px;}
+    .column-list .icon-text {margin-top: 16px; padding: 0 20px;}
     .column-list .icon-text p {margin-bottom: 10px;}
     .business .column-list li {flex: 1 1 60%;}
     .business .column-list li .icon-item {max-width: 420px; width: 100%; height: 350px;padding: 30px 2vw 16px;margin-top:12px; background-color: #fff;box-shadow: 0px 2px 15px 3px rgb(0 0 0 / 7%);}
@@ -875,7 +881,6 @@ footer .copyright span {margin-left:10px;}
     .img-list .list-items .list-item .list-text {width: 120px; text-align: left;}
 
     /*****LOCATION*****/
-    .location {height: auto;}
     .location-in {padding: 5vh 0;}
     .location .location-addr {flex-direction: column;align-items: flex-start;padding: 5px 0px 10px 0;}
     .location .location-addr p {margin-bottom: 5px; font-weight: 500; color: #334291; background-color: #EFF6FF;}
