--- a/css/style.css
+++ b/css/style.css
@@ -603,10 +603,11 @@ header.open .triggerBtn .bar3 {-webkit-transform: translateY(-8px) rotate(-45deg
 /*****FOOTER*****/
 footer {position: relative;padding: 70px 0 82px;color:#fff; background-color: #06092B;}
 footer .foot-logo {position: relative;width: 160px;height: 38px;margin-bottom: 8px;overflow: hidden;background: url('../images/logo.svg') no-repeat center;background-size: cover;background-position-y: 0px;}
-footer .footer-in p {line-height: 1.3;}
+footer .footer-in p {line-height: 1.4;}
 footer .footer-info {display: flex; flex-wrap: wrap; width: 380px;margin-top:50px;}
 footer .footer-info li {margin: 6px 27px 6px 0;}
 footer .footer-info li span {opacity: 0.5; margin-right: 8px;}
+footer .footer-info li a {color: #fff;}
 footer .copyright {position: absolute; right:0; bottom:8px;opacity: 0.5;}
 footer .copyright span {margin:5px 10px 5px 0;}
 
