--- a/css/style.css
+++ b/css/style.css
@@ -632,6 +632,10 @@ footer .copyright span {margin:5px 10px 5px 0;}
     html, body {height: auto; overflow:visible;overscroll-behavior: contain;}
     .wrapper {padding: 0 20px;}
     .top-btnbox .top-btn {right: 20px; bottom: 15px;}
+    .panel-top .panel-title {opacity: 0; transform: translateY(50px); transition: .3s all ease-in-out;}
+    .panel.on .panel-top .panel-title {opacity: 1; transform: translateY(0px);}
+    .panel .panel-text {opacity: 0; transform: translateY(30px); transition: .3s .2s all ease-in-out;}
+    .panel.on .panel-text {opacity: 1; transform: translateY(0px);}
 
     /*****HEADER*****/
     header, header.on .header-wrap {height: 60px;}
@@ -650,39 +654,63 @@ footer .copyright span {margin:5px 10px 5px 0;}
     /*****ABOUT*****/
     .about-in {padding: 15vh 0 10vh;}
     .about-slider .slider-title {margin-top: 5vh;}
-    .about-slider .swiper {height: 350px;opacity: 1;transform: translateY(0);;}
+    .about-slider .swiper {height: 350px;}
+    .about.on .about-slider .swiper {opacity: 1;transform: translateY(0);}
     .about-slider .swiper-button-prev {left: 42%; margin-top:-3%;}
     .about-slider .swiper-button-next {right:0; margin-top:-3%;}
     .about-slider .swiper-pagination {bottom: 0;}
     .sp-img .imgbox img {transform: translate(-22%,-36%) scale(0.7);}
+    .about.on .about-slider .slider-title .sub-title {opacity: 1; transform: translateY(0px);}
+    .about.on .about-slider .slider-title .sp-title {opacity: 1; transform: translateY(0px);}
+    .about.on .about-slider .sp-img {opacity: 1; transform: translateY(0px);}
+    .about.on .about-slider .slider-text .sp-text {opacity: 1; transform: translateY(0px);}
 
     /*****BUSINESS*****/
     .business-in {padding: 15vh 0 10vh;}
     .business .column-list {margin: 35px -20px 0;}
-    .business .column-list li {margin: 0 20px; opacity: 1;transform: translateY(0);}
+    .business .column-list li {margin: 0 20px;}
+    .business.on .column-list li:nth-child(1) {opacity: 1; transform: translateY(0px);}
+    .business.on .column-list li:nth-child(2) {opacity: 1; transform: translateY(0px);}
+    .business.on .column-list li:nth-child(3) {opacity: 1; transform: translateY(0px);}
 
     /*****OUR POSITIONS*****/
     .positions-in {padding: 15vh 0 10vh;}
-    .mobis-slider .swiper-slide {opacity: 1;transform: translateY(0);}
+    /* .mobis-slider .swiper-slide {opacity: 1;transform: translateY(0);} */
     .mobis-slider.destroy .swiper-slide {margin-left: 16px;}
+    .positions.on .mobis-slider {opacity: 1; transform: translateY(0px);}
+    .positions.on .mobis-slider .swiper-slide {opacity: 1; transform: translateY(0px) scale(0.8);transition: .3s all ease-in-out;}
+    .positions.on .mobis-slider .swiper-slide.swiper-slide-active {transform: translateY(0) scale(1.2);}
+    .positions.on .mobis-slider .swiper-slide:nth-child(1) {transition-delay: .2s;}
+    .positions.on .mobis-slider .swiper-slide:nth-child(2) {transition-delay: .3s;}
+    .positions.on .mobis-slider .swiper-slide:nth-child(3) {transition-delay: .4s;}
+    .positions.on .mobis-slider .swiper-slide:nth-child(4) {transition-delay: .5s;}
     .positions.on .mip-slider {opacity: 1;transform: translateY(0);}
 
     /*****OUR PRODUCTS*****/
-    .products-in {padding: 15vh 10vh;}
+    .products-in {padding: 0;}
+    .products.on .products-cont ul li {opacity: 1; transform: translateY(0px);}
+    .products.on .products-cont ul li:nth-child(1) {transition-delay: .1s;}
+    .products.on .products-cont ul li:nth-child(2) {transition-delay: .2s;}
+    .products .products-company p {opacity: 0; transform: translateY(50px); transition: .3s .2s all ease-in-out;}
+    .products.on .products-company p {opacity: 1; transform: translateY(0px);}
+    .btn-wrap {opacity: 0; transform: translateY(50px); transition: .3s .3s all ease-in-out;}
+    .products.on .btn-wrap {opacity: 1; transform: translateY(0px);}
     
     /*****LOCATION*****/
     .location-in {padding: 15vh 10vh;}
     /* .location .location-map {opacity: 1;transform: translateY(0);} */
     /* .location .location-cont ul li {opacity: 1;transform: translateY(0);} */
+    .location.on .location-map {opacity: 1; transform: translateY(0px);}
+    .location.on .location-cont {opacity: 1; transform: translateY(0px);}
+    .location.on .location-cont ul li {opacity: 1; transform: translateY(0px);}
+    .location.on .location-cont ul li:nth-child(1) {transition-delay: .2s;}
+    .location.on .location-cont ul li:nth-child(2) {transition-delay: .3s;}
+    .location.on .location-cont ul li:nth-child(3) {transition-delay: .4s;}
     
 }
 
 @media screen and (max-width: 1024px) {
-    a[href^="tel"] {
-        color: inherit; /* Inherit text color of parent element. */
-        text-decoration: none; /* Remove underline. */
-        /* Additional css `propery: value;` pairs here */
-      }
+    a[href^="tel"] {color: inherit; /* Inherit text color of parent element. */text-decoration: none;}
     .wrapper {height: auto;}
 
     /*****HEADER*****/
@@ -712,23 +740,19 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .visual-slider .swiper-slide-active .slider-bg {transform: none; transition: none;}
 
     /*****ABOUT*****/
-    .panel-top .panel-title {opacity: 0; transform: translateY(50px); transition: .3s all ease-in-out;}
-    .panel.on .panel-top .panel-title {opacity: 1; transform: translateY(0px);}
-
     .about-in {padding: 10vh 0;}
     .about-in .panel-top {margin-bottom: 50px;}
     .about-slider {top:0;}
     .about-slider .slider-title {margin: 0;}
-    .about-slider .slider-title .sub-title {opacity: 0; transform: translateY(40px); transition: .3s .1s all ease-in-out;}
-    .about-slider .slider-title .sp-title {opacity: 0; transform: translateY(30px); transition: .3s .2s all ease-in-out}
     .about-slider .swiper-slide-active .sub-title, .about-slider .swiper-slide-active .sp-title, .about-slider .swiper-slide-active .sp-text {animation: none;}
     .about-slider .sp-img {position: relative; top:0; left:0; opacity: 0; transform: translateY(40px); transition: .3s .3s all ease-in-out;}
     .sp-img .imgbox img {position: relative; top:0; left:0; transform: translate(0px,0px); width: 100%;}
     .current .sp-img .imgbox, .current .swiper-slide-active .sp-img .imgbox, .out .sp-img .imgbox, .out .swiper-slide-active .sp-img .imgbox { animation:none;}
     .about-slider .swiper {height: auto;}
+    .about.on .about-slider .swiper {opacity: 1; transform: translateY(0px);}
     .active .about-slider .swiper {overflow: hidden;}
     .about-slider .swiper-wrapper {overflow: hidden;}
-    .about-slider .slider-controls {display: flex;margin-top: 15px;opacity: 0; transform: translateY(70px); transition: .3s .6s all ease-in-out;}
+    .about-slider .slider-controls {display: flex;margin-top: 15px;/*opacity: 0; transform: translateY(70px); transition: .3s .6s all ease-in-out;*/}
     .about-slider .slider-controls .count-slider {display: flex;align-items: center;}
     .about-slider .swiper-button-next {top: auto;right: -7px;bottom: -12px; margin-top:0;}
     .about-slider .swiper-button-next:after {width: 12px; height: 20px;}
@@ -741,12 +765,6 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .about-slider .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .about-slider .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {margin:0}
     .about-slider .swiper-pagination-bullets .swiper-pagination-bullet:after {content: ''; position: absolute; top:0; left:0; width: 0%; height: 3px; background-color: #FE0000; transition: .3s all ease;} 
     .about-slider .swiper-pagination-bullet.swiper-pagination-bullet-active:after {width: 100%;}
-    /* .panel.on .panel-top .panel-title {opacity: 1; transform: translateY(0px);} */
-    .about.on .about-slider .slider-title .sub-title {opacity: 1; transform: translateY(0px);}
-    .about.on .about-slider .slider-title .sp-title {opacity: 1; transform: translateY(0px);}
-    .about.on .about-slider .sp-img {opacity: 1; transform: translateY(0px);}
-    .about.on .about-slider .slider-controls {opacity: 1; transform: translateY(0px);}
-    .about.on .about-slider .slider-text .sp-text {opacity: 1; transform: translateY(0px);}
 
     /*****BUSINESS*****/
     .business {height: auto;}
@@ -759,21 +777,16 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .business .column-list li:nth-child(2) {opacity: 0; transform: translateY(100px); transition: .3s .4s all ease-in-out;}
     .business .column-list li:nth-child(3) {opacity: 0; transform: translateY(150px); transition: .3s .6s all ease-in-out;}
     .business .column-list .icon-item {padding: 0 2vw;}
-    .business.on .panel-text {opacity: 1; transform: translateY(0px);}
-    .business.on .column-list li:nth-child(1) {opacity: 1; transform: translateY(0px);}
-    .business.on .column-list li:nth-child(2) {opacity: 1; transform: translateY(0px);}
-    .business.on .column-list li:nth-child(3) {opacity: 1; transform: translateY(0px);}
+    
     
     /*****OUR POSITIONS*****/
     .positions-in {padding: 10vh 0;}
     .positions {height: auto; overflow: hidden;}
     .positions .mobis-logo {top: auto; bottom: -10px; right:50px; width: 190px;}
-    .mobis-slider {margin: 100px 0 75px 0;opacity: 0; transform: translateY(70px); transition: .3s .2s all ease-in-out;}
-    .positions.on .mobis-slider {opacity: 1; transform: translateY(0px);}
+    .mobis-slider {margin: 100px 0 75px 0;opacity: 0; transform: translateY(70px); transition: .5s all ease-in-out;}
+   
     .mobis-slider .swiper-slide:before {font-size: 130px;}
     .mobis-slider .swiper-slide .positions-item {height: 165px;}
-    .mobis-slider .swiper-slide {transform: scale(0.8);transition: .3s all ease-in-out;}
-    .mobis-slider .swiper-slide.swiper-slide-active {transform: translateY(0) scale(1.2);}
     .mobis-slider .swiper-slide.swiper-slide-active:before {transform: translate(-55px, -60px);opacity: 0.4;}
     .mobis-slider .swiper-slide.swiper-slide-active .positions-item {/*width: 216px;height: 216px; margin-top:-25px;*/ background-color: #fff;box-shadow: 0px 7px 30px 3px rgb(0 0 0 / 47%);}
     .mobis-slider .swiper-slide:nth-child(1).swiper-slide-active .icon-box {background-position-x: 13px;}
@@ -795,9 +808,7 @@ footer .copyright span {margin:5px 10px 5px 0;}
 
     /*****OUR PRODUCTS*****/
     .products .products-cont ul li {opacity: 0; transform: translateY(70px); transition: .3s .1s all ease-in-out;}
-    .products.on .products-cont ul li {opacity: 1; transform: translateY(0px);}
-    .products.on .products-cont ul li:nth-child(1) {transition-delay: .1s;}
-    .products.on .products-cont ul li:nth-child(2) {transition-delay: .2s;}
+    
     
     /*POPUP*/
     .popup {top:30vh; left: 20px; right: 20px; height: 75vh;}
@@ -836,13 +847,8 @@ footer .copyright span {margin:5px 10px 5px 0;}
     .location {height: auto;}
     .location-in {padding: 10vh 0;}
     .location .location-map {opacity: 0; transform: translateY(70px); transition: .3s .1s all ease-in-out;}
-    .location.on .location-map {opacity: 1; transform: translateY(0px);}
     .location .location-cont {opacity: 0; transform: translateY(70px); transition: .3s .3s all ease-in-out;}
-    .location.on .location-cont {opacity: 1; transform: translateY(0px);}
-    .location.on .location-cont ul li {opacity: 1; transform: translateY(0px);}
-    .location.on .location-cont ul li:nth-child(1) {transition-delay: .2s;}
-    .location.on .location-cont ul li:nth-child(2) {transition-delay: .3s;}
-    .location.on .location-cont ul li:nth-child(3) {transition-delay: .4s;}
+    
 
     /*****FOOTER*****/
     footer {padding: 24px 0px; font-size: 14px;}
